# Self_Driving_Car_Engineer

./: README.md
P1_Object_Detection/: Final_Report.md
P1_Object_Detection/1_model_training/: efficientdet_d1_augmented.ipynb  ssd_mobilenet_v2.ipynb  ssd_resnet50_v1.ipynb
P1_Object_Detection/1_model_training/logs/ssd_resnet50_v1/train/: events.out.tfevents.1734988337.ip-10-2-197-223.ec2.internal.52.0.v2
P1_Object_Detection/1_model_training/source_dir/: efficientdet_d1_aug.config  ssd_mobilenet_v2.config  ssd_resnet50_v1.config
P1_Object_Detection/2_run_inference/: 2_deploy_model.ipynb
P2_3D_Object_Detection/nd013-c2-fusion-starter/: Final_Report.md  Mid_term_Report.md  loop_over_dataset.py  requirements.txt  writeup.md
P2_3D_Object_Detection/nd013-c2-fusion-starter/image_results/final_project/: tracking_2.webm  tracking_3.webm  tracking_exercise_1.webm
P2_3D_Object_Detection/nd013-c2-fusion-starter/student/: association.py  filter.py  measurements.py  objdet_detect.py  objdet_eval.py  objdet_pcl.py  trackmanagement.py
P3_Scan_Matching_Localization/nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/: CMakeLists.txt  Makefile
P4_Motion_Planning/nd013-c5-planning-starter/project/starter_files/: behavior_planner_FSM.cpp  cost_functions.cpp  motion_planner.cpp  planning_params.h  velocity_profile_generator.cpp
P5_Control_and_Trajectory/nd013-c6-control-starter/project/: Report.md  steer_pid_data.txt  throttle_pid_data.txt
P5_Control_and_Trajectory/nd013-c6-control-starter/project/pid_controller/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  pid_controller.cpp  pid_controller.h
nd0013_cd2693_Exercise_Starter_Code/Lesson_7_Project_Scan_Matching_Localization/c3-project/: c3-main.cpp
